@@ -11,3 +11,31 @@ Datastar dashboard (`fh-datastar-view`): dashboards authored in
   Actions from [home-addon/Dockerfile](Dockerfile). Releasing = merging a
   `version:` bump in [config.yaml](config.yaml) to main; the workflow builds,
   publishes, and creates the matching `vX.Y.Z` tag.
+- **GraalJS**: the image carries a GraalVM JavaScript isolate library, Oracle's
+  build, under the [GraalVM Free Terms and Conditions](https://www.oracle.com/downloads/licenses/graal-free-license.html)
+  — free to redistribute bundled in a product as long as nothing is charged
+  for it, which is what this add-on does. The community build is a drop-in
+  replacement under MIT/UPL at 3–4× the native memory, if the terms are ever
+  unwanted. The version is written once, in `build.sbt`: sbt resolves both
+  platforms' libraries as ordinary dependencies and stages them for the image
+  build, so nothing downloads inside the container and the library cannot
+  disagree with the jars it runs against — a mismatched pair runs silently
+  rather than failing. Truffle unpacks its own native resources into
+  `/data/graal-cache` the first time an engine is built (161 MB, once per
+  GraalVM version); `backup_exclude` keeps that out of HA backups.
+
+Is the isolate healthy in the built image?
+
+```sh
+docker run --rm --entrypoint java ghcr.io/perok/fh-dashboard:latest \
+  --enable-native-access=ALL-UNNAMED \
+  -Dpolyglot.engine.userResourceCache=/tmp/graal-cache \
+  -cp /opt/fh-dashboard.jar:/opt/fh/js-isolate.jar \
+  fh.view.runtime.JsIsolateCheck
+```
+
+It runs a line of JavaScript and prints RSS before and after, which is the
+only way to see memory a foreign library allocates outside the JVM heap. CI
+runs it inside the built image — amd64 on a pull request, aarch64 under
+emulation on main. (A throwaway cache path here so the check does not warm
+the real one; `run.sh` uses `$FH_GRAAL_CACHE`.)
